--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,6 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 
 a {
@@ -25,8 +24,10 @@ a:hover {
 
 body {
   margin: 0;
+  display: flex;
+  place-items: center;
   min-width: 320px;
-  height: 100dvh;
+  min-height: 100vh;
 }
 
 h1 {
@@ -39,8 +40,9 @@ h1 {
 }
 
 #app {
-  max-width: 800px;
+  max-width: 1280px;
   margin: 0 auto;
+  padding: 2rem;
   text-align: center;
 }
 
