--- a/src/app.css
+++ b/src/app.css
@@ -22,12 +22,9 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+html, body {
+  width: 100%;
+  height: 100%;
 }
 
 h1 {
@@ -35,16 +32,14 @@ h1 {
   line-height: 1.1;
 }
 
-#app {
-  /*
+.page-container {
   max-width: 1280px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto;
-    */
   padding: 2rem;
-  /*
   text-align: center;
-  */
-
+  position: relative
 }
 
 @media (prefers-color-scheme: light) {
