--- a/src/app.css
+++ b/src/app.css
@@ -29,6 +29,17 @@ html, body {
   padding: 0;
 }
 
+.page-container {
+  max-width: 1280px;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+  position: relative;
+  padding: 0.5rem;
+  box-sizing: border-box;
+}
+
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
