--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,6 +11,7 @@
 
 button {
   cursor: pointer;
+  color: unset;
 }
 
 a {
@@ -35,24 +32,68 @@ body {
   padding: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
 
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
+body,
+.lightMode {
+  --text-color: #213547;
+  --background-color: white;
+  --border-color: rgb(195, 195, 195);
+  --timeline-even-bg-color: #f8f8f8;
+  --timeline-bg-color: #e8e8e8;
+  --year-header-bg-color: rgb(214, 214, 214);
+  --year-header-color: black;
+  --timeline-coasting-bg-color: green;
+  --menu-bg-color: #eeeeee;
+  --top-menu-bg-color: rgb(201, 201, 201);
+  --top-menu-btn-bg-color: rgb(184, 184, 184);
+  --menu-btn-hover-bg-color: #dcffdf;
+  --menu-btn-selected-bg-color: #dcffdf;
+  --side-menu-bg-color: rgb(250, 250, 250);
+  --tooltip-bg-color: rgb(223, 223, 223);
+  --box-shadow-color: #e6e6e6;
+  --goto-visualizer-btn-bg-color: rgb(99, 199, 99);
+  --goto-visualizer-btn-border-color: rgb(85, 167, 85);
+  --percentage-circle-bg-color: rgb(235, 235, 235);
+  --percentage-circle-notches-color: rgb(68, 68, 68);
+  --percentage-circle-text-color: rgb(51, 51, 51);
+  color: var(--text-color);
+  background-color: var(--background-color);
 }
 
-table,
-th,
-td {
-  border: 1px solid;
-  border-collapse: collapse;
+.lightMode {
+  scrollbar-color: rgb(141, 141, 141) rgb(218, 218, 218);
+}
+
+.darkMode {
+  --text-color: white;
+  --background-color: #202122;
+  --border-color: black;
+  --timeline-even-bg-color: #252525;
+  --timeline-bg-color: #2d2d2d;
+  --year-header-bg-color: #1a1a1a;
+  --year-header-color: white;
+  --timeline-coasting-bg-color: yellow;
+  --menu-bg-color: #1a1a1a;
+  --top-menu-bg-color: #1a1a1a;
+  --menu-btn-hover-bg-color: #3a3a3a;
+  --menu-btn-selected-bg-color: #3a3a3a;
+  --side-menu-bg-color: #2a2a2a;
+  --tooltip-bg-color: black;
+  --milestone-table-bg-color: #282828;
+  --milestone-table-head-bg-color: #222222;
+  --milestone-table-even-rows-bg-color: #242424;
+  --box-shadow-color: #121212;
+  --goto-visualizer-btn-bg-color: rgb(26, 95, 26);
+  --goto-visualizer-btn-border-color: rgb(7, 39, 7);
+  --top-menu-btn-bg-color: rgb(59, 59, 59);
+  --percentage-circle-bg-color: rgb(102, 102, 102);
+  --percentage-circle-notches-color: black;
+  --percentage-circle-text-color: rgb(235, 235, 235);
+  scrollbar-color: rgb(104, 104, 104) rgb(66, 66, 66);
+}
+
+.lightMode input {
+  background-color: white;
+  color: var(--text-color);
+  border-color: var(--border-color);
 }
